# voids

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pixi.toml  pyproject.toml  spec_v0_1.md
docs/: AGENTS.md  background.md  concepts.md  examples.md  getting_started.md  image_segmentation_network_extraction.md  index.md  local_thickness_morphometry.md  porosity_maps.md  synthetic_cases.md  workflow.md
notebooks/: 02_mwe_openpnm_crosscheck_optional.ipynb  02_mwe_openpnm_crosscheck_optional.py  04_mwe_manufactured_porespy_extraction.ipynb  04_mwe_manufactured_porespy_extraction.py  05_mwe_cartesian_mesh_network.ipynb  06_mwe_real_porespy_extraction.ipynb  06_mwe_real_porespy_extraction.py  07_mwe_synthetic_vug_case.ipynb  07_mwe_synthetic_vug_case.py  08_mwe_image_based_vug_shape_sensitivity.ipynb  08_mwe_image_based_vug_shape_sensitivity.py  09_mwe_image_based_vug_sensitivity_2d.ipynb  09_mwe_image_based_vug_sensitivity_2d.py  09_mwe_lattice_based_vug_sensitivity.ipynb  09_mwe_lattice_based_vug_sensitivity.py  10_mwe_lattice_based_vug_sensitivity.ipynb  10_mwe_lattice_based_vug_sensitivity.py  10_mwe_lattice_based_vug_sensitivity_2d.ipynb  10_mwe_lattice_based_vug_sensitivity_2d.py  11_mwe_lattice_based_vug_sensitivity_2d.ipynb  11_mwe_lattice_based_vug_sensitivity_2d.py  12_mwe_synthetic_volume_openpnm_benchmark.ipynb  12_mwe_synthetic_volume_openpnm_benchmark.py  13_mwe_synthetic_volume_xlb_benchmark.ipynb  13_mwe_synthetic_volume_xlb_benchmark.py  14_mwe_shape_factor_conductance_comparison.ipynb  14_mwe_shape_factor_conductance_comparison.py  15_mwe_external_pnflow_benchmark.ipynb  15_mwe_external_pnflow_benchmark.py  17_mwe_solver_options_benchmark.ipynb  17_mwe_solver_options_benchmark.py  18_mwe_drp317_berea_raw_porosity_perm.ipynb  18_mwe_drp317_berea_raw_porosity_perm.py  19_mwe_drp317_bentheimer_raw_porosity_perm.ipynb  19_mwe_drp317_bentheimer_raw_porosity_perm.py  20_mwe_drp317_banderagray_raw_porosity_perm.py  21_mwe_drp317_banderabrown_raw_porosity_perm.ipynb  (+18 more)
scripts/: bump_version.py  sync_deps.py
(+218 files in other folders)
