[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "voids"
version = "0.1.3"
description = "Scientific Python package for pore network modeling (PNM)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LGPL-2.1-only" }
authors = [
  { name = "Diego Volpatto", email = "volpatto@lncc.br" }
]
keywords = ["pore-network-modeling", "pnm", "porous-media", "scientific-computing"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-image>=0.22",
  "porespy>=2.4",
  "openpnm>=3.6,<3.7",
  "h5py>=3.10",
  "plotly>=5.0",
  "pyvista>=0.43",
  "typing_extensions>=4.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-regressions>=2.8",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "ipython>=8.0",
  "jupyterlab>=4.0",
  "matplotlib>=3.8",
]
viz = [
  "pyvista>=0.43",
]
test = [
  "networkx>=3.2",
]
lbm = [
  "xlb>=0.3,<0.4",
]
docs = [
  "mkdocs>=1.5,<2.0",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/geomech-project/voids"
Repository = "https://github.com/geomech-project/voids"
Issues = "https://github.com/geomech-project/voids/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/voids"]

[tool.setuptools]
# map the “root” of all your packages to src/
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
# look under src/ for any packages matching "voids*"
where  = ["src"]
include = ["voids*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
